--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dot": "^1.1.3",
+    "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
